@@ -79,7 +79,7 @@ class Integer(base.AbstractSimpleAsn1Item):
                 return int(value)
             except:
                 raise error.PyAsn1Error(
-                    'Can\'t coerce %s into integer: %s' % (value, sys.exc_info()[1])
+                    'Can\'t coerce %r into integer: %s' % (value, sys.exc_info()[1])
                     )
         r = self.__namedValues.getValue(value)
         if r is not None:
@@ -88,7 +88,7 @@ class Integer(base.AbstractSimpleAsn1Item):
             return int(value)
         except:
             raise error.PyAsn1Error(
-                'Can\'t coerce %s into integer: %s' % (value, sys.exc_info()[1])
+                'Can\'t coerce %r into integer: %s' % (value, sys.exc_info()[1])
                 )
 
     def prettyOut(self, value):
@@ -689,13 +689,21 @@ class SetOf(base.AbstractConstructedAsn1Item):
                     myClone.setComponentByPosition(idx, c.clone())
             idx = idx + 1
         
-    def _verifyComponent(self, idx, value):
-        if self._componentType is not None and \
-               not self._componentType.isSuperTypeOf(value):
-            raise error.PyAsn1Error('Component type error %s' % (value,))
+    def _verifyComponent(self, idx, value, exactTypes=False,
+                         matchTags=True, matchConstraints=True):
+        if self._componentType is not None:
+            f = exactTypes and \
+                self._componentType.isSameTypeWith or \
+                self._componentType.isSuperTypeOf
+            if not f(value, matchTags, matchConstraints):
+                raise error.PyAsn1Error('Component type error %r' % (value,))
 
     def getComponentByPosition(self, idx): return self._componentValues[idx]
-    def setComponentByPosition(self, idx, value=None, verifyConstraints=True):
+    def setComponentByPosition(self, idx, value=None,
+                               verifyConstraints=True,
+                               exactTypes=False,
+                               matchTags=True,
+                               matchConstraints=True):
         l = len(self._componentValues)
         if idx >= l:
             self._componentValues = self._componentValues + (idx-l+1)*[None]
@@ -715,7 +723,10 @@ class SetOf(base.AbstractConstructedAsn1Item):
                 raise error.PyAsn1Error('Instance value required')
         if verifyConstraints:
             if self._componentType is not None:
-                self._verifyComponent(idx, value)
+                self._verifyComponent(idx, value,
+                                      exactTypes=exactTypes,
+                                      matchTags=matchTags,
+                                      matchConstraints=matchConstraints)
             self._verifySubtypeSpec(value, idx)            
         if self._componentValues[idx] is None:
             self._componentValuesSet = self._componentValuesSet + 1
@@ -779,24 +790,30 @@ class SequenceAndSetBase(base.AbstractConstructedAsn1Item):
                     myClone.setComponentByPosition(idx, c.clone())
             idx = idx + 1
 
-    def _verifyComponent(self, idx, value):
+    def _verifyComponent(self, idx, value, exactTypes=False,
+                         matchTags=True, matchConstraints=True):
         if idx >= self._componentTypeLen:
             raise error.PyAsn1Error(
                 'Component type error out of range'
                 )
         t = self._componentType[idx].getType()
-        if not t.isSuperTypeOf(value):
+        f = exactTypes and t.isSameTypeWith or t.isSuperTypeOf
+        if not f(value, matchTags, matchConstraints):
             raise error.PyAsn1Error('Component type error %r vs %r' % (t, value))
 
     def getComponentByName(self, name):
         return self.getComponentByPosition(
             self._componentType.getPositionByName(name)
             )
-    def setComponentByName(self, name, value=None, verifyConstraints=True):
+    def setComponentByName(self, name, value=None,
+                           verifyConstraints=True,
+                           exactTypes=False,
+                           matchTags=True,
+                           matchConstraints=True):
         return self.setComponentByPosition(
             self._componentType.getPositionByName(name), value,
-            verifyConstraints
-            )
+            verifyConstraints, exactTypes, matchTags, matchConstraints
+        )
 
     def getComponentByPosition(self, idx):
         try:
@@ -805,7 +822,11 @@ class SequenceAndSetBase(base.AbstractConstructedAsn1Item):
             if idx < self._componentTypeLen:
                 return
             raise
-    def setComponentByPosition(self, idx, value=None, verifyConstraints=True):
+    def setComponentByPosition(self, idx, value=None,
+                               verifyConstraints=True,
+                               exactTypes=False,
+                               matchTags=True,
+                               matchConstraints=True):
         l = len(self._componentValues)
         if idx >= l:
             self._componentValues = self._componentValues + (idx-l+1)*[None]
@@ -822,7 +843,10 @@ class SequenceAndSetBase(base.AbstractConstructedAsn1Item):
                 raise error.PyAsn1Error('Instance value required')
         if verifyConstraints:
             if self._componentTypeLen:
-                self._verifyComponent(idx, value)
+                self._verifyComponent(idx, value,
+                                      exactTypes=exactTypes,
+                                      matchTags=matchTags,
+                                      matchConstraints=matchConstraints)
             self._verifySubtypeSpec(value, idx)            
         if self._componentValues[idx] is None:
             self._componentValuesSet = self._componentValuesSet + 1
@@ -908,23 +932,29 @@ class Set(SequenceAndSetBase):
             return c
         
     def setComponentByType(self, tagSet, value=None, innerFlag=0,
-                           verifyConstraints=True):
+                           verifyConstraints=True,
+                           exactTypes=False,
+                           matchTags=True,
+                           matchConstraints=True):
         idx = self._componentType.getPositionByType(tagSet)
         t = self._componentType.getTypeByPosition(idx)
         if innerFlag:  # set inner component by inner tagSet
             if t.getTagSet():
                 return self.setComponentByPosition(
-                    idx, value, verifyConstraints
-                    )
+                    idx, value, verifyConstraints,
+                    exactTypes, matchTags, matchConstraints
+                )
             else:
                 t = self.setComponentByPosition(idx).getComponentByPosition(idx)
                 return t.setComponentByType(
-                    tagSet, value, innerFlag, verifyConstraints
-                    )
+                    tagSet, value, innerFlag,
+                    verifyConstraints, exactTypes, matchTags, matchConstraints
+                )
         else:  # set outer component by inner tagSet
             return self.setComponentByPosition(
-                idx, value, verifyConstraints
-                )
+                idx, value,
+                verifyConstraints, exactTypes, matchTags, matchConstraints
+            )
             
     def getComponentTagMap(self):
         if self._componentType:
@@ -996,7 +1026,11 @@ class Choice(Set):
             else:
                 myClone.setComponentByType(tagSet, c.clone())
 
-    def setComponentByPosition(self, idx, value=None, verifyConstraints=True):
+    def setComponentByPosition(self, idx, value=None,
+                               verifyConstraints=True,
+                               exactTypes=False,
+                               matchTags=True,
+                               matchConstraints=True):
         l = len(self._componentValues)
         if idx >= l:
             self._componentValues = self._componentValues + (idx-l+1)*[None]
@@ -1014,7 +1048,10 @@ class Choice(Set):
                 )
         if verifyConstraints:
             if self._componentTypeLen:
-                self._verifyComponent(idx, value)
+                self._verifyComponent(idx, value,
+                                      exactTypes=exactTypes,
+                                      matchTags=matchTags,
+                                      matchConstraints=matchConstraints)
             self._verifySubtypeSpec(value, idx)            
         self._componentValues[idx] = value
         self._currentIdx = idx
